[gd_scene load_steps=2 format=3 uid="uid://c8ng081odus8v"]

[ext_resource type="Script" path="res://AnswerKey.gd" id="1_wt3n1"]

[node name="AnswerKey" type="Node2D"]
script = ExtResource("1_wt3n1")

[node name="AnswerKey1" type="ColorRect" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 50.0
metadata/_edit_use_anchors_ = true

[node name="AnswerKey2" type="ColorRect" parent="."]
offset_left = 60.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 50.0
metadata/_edit_use_anchors_ = true

[node name="AnswerKey3" type="ColorRect" parent="."]
offset_left = 110.0
offset_top = 10.0
offset_right = 150.0
offset_bottom = 50.0
metadata/_edit_use_anchors_ = true

[node name="AnswerKey4" type="ColorRect" parent="."]
offset_left = 160.0
offset_top = 10.0
offset_right = 200.0
offset_bottom = 50.0
metadata/_edit_use_anchors_ = true
